Tests: Make Jest test runner work with Circle CI

--- a/circle.yml
+++ b/circle.yml
@@ -15,10 +15,10 @@ test:
           fi
       : parallel: true
   override:
-    - bin/run-integration :
+    - bin/run-integration:
         parallel: true
     - npm run lint:config-defaults
-    - ./node_modules/.bin/eslint-eslines :
+    - ./node_modules/.bin/eslint-eslines:
         parallel: true
         files:
           - client/**/*.js
@@ -30,8 +30,11 @@ test:
         files:
           - client/**/test/*.js
           - client/**/test/*.jsx
-    - MOCHA_FILE=./test-results-server.xml npm run test-server -- -R mocha-junit-reporter -t $CIRCLE_NODE_TOTAL -i $CIRCLE_NODE_INDEX:
+    - npm run test-server:ci:
         parallel: true
+        files:
+          - server/**/test/*.js
+          - server/**/test/*.jsx
     - MOCHA_FILE=./test-results-test.xml npm run test-test -- -R mocha-junit-reporter -t $CIRCLE_NODE_TOTAL -i $CIRCLE_NODE_INDEX:
         parallel: true
   post:
